# llm-council-cli

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  config.yaml  pyproject.toml
.github/workflows/: test.yml
backend/: config.py  council.py  main.py  openrouter.py  search.py  storage.py
backend/council/: __init__.py  aggregation.py  debate.py  orchestrator.py  parsers.py  prompts.py  react.py  streaming.py
cli/: __init__.py  __main__.py  chat.py  chat_session.py  main.py  orchestrators.py  presenters.py  runners.py  tui.py
docs/: DEVLOG.md  PLAN.md  REFACTORING.md
llm_council/: settings.py
llm_council/adapters/: __init__.py  json_storage.py  openrouter_client.py
llm_council/cli/: __main__.py  chat_commands.py  chat_session.py  constants.py  main.py  presenters.py  runners.py  tui.py
llm_council/council/: debate.py  debate_streaming.py  prompts.py  ranking.py
llm_council/engine/: __init__.py  debate.py  debate_async.py  debate_streaming.py  parsers.py  prompts.py  ranking.py  react.py  reflection.py
tests/: conftest.py  test_chat_commands.py  test_cli_imports.py  test_conversation_context.py  test_debate.py  test_ranking_parser.py  test_react.py  test_reflection.py  test_search.py  test_streaming.py
