[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
]

[project.scripts]
llm-council = "cli.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["cli", "backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["backend", "cli"]
exclude = ["tests"]
# Relax checks for CLI project - these are common in dynamic Python code
reportOptionalMemberAccess = "warning"
reportArgumentType = "warning"
reportReturnType = "warning"
reportAttributeAccessIssue = "warning"
